--- a/URLStudy/Base.lproj/Main.storyboard
+++ b/URLStudy/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Controls-->
         <scene sceneID="nJO-xO-7vq">
             <objects>
-                <collectionViewController id="6U1-4M-29A" customClass="MainViewController" customModule="URLStudy" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="6U1-4M-29A" customClass="StartViewController" customModule="URLStudy" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="icE-ll-1Cz">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
